// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeMap should render a location button when user has a location correctly 1`] = `
<RNCSafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    {
      "backgroundColor": "#38976d",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#38976d",
          "flexDirection": "row",
          "paddingBottom": 18,
          "paddingTop": 20.5,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Go back to previous screen"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "left": 0,
          "opacity": 1,
          "paddingHorizontal": 23,
          "paddingVertical": 18,
          "position": "absolute",
          "transform": [
            {
              "scaleX": 1,
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/back.webp",
          }
        }
        style={false}
        tintColor={false}
      />
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "#ffffff",
            "fontFamily": "Whitney-Semibold",
            "fontSize": 18,
            "letterSpacing": 1,
            "maxWidth": 650,
            "paddingTop": 5,
          },
        ]
      }
    >
      RANGE MAP
    </Text>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    transparent={true}
    useNativeDriverForBackdrop={true}
    visible={false}
  />
  <AIRMap
    initialRegion={null}
    onChange={[Function]}
    onMapReady={[Function]}
    onRegionChangeComplete={[Function]}
    region={
      {
        "latitude": 42,
        "longitude": 42,
      }
    }
    style={
      {
        "height": 1259,
        "width": 750,
      }
    }
    testID="range-map"
    zoomEnabled={true}
  >
    <AIRMapUrlTile
      tileSize={512}
      urlTemplate="https://api.inaturalist.org/v1/grid/{z}/{x}/{y}.png?taxon_id=some_id&color=%2377B300&verifiable=true"
    />
    <AIRMapMarker
      coordinate={
        {
          "latitude": 42,
          "longitude": 42,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-camerabutton-onmap.webp",
          }
        }
      />
    </AIRMapMarker>
    <AIRMapMarker
      coordinate={
        {
          "latitude": 42.42,
          "longitude": 42.42,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-location-onmap.webp",
          }
        }
      />
    </AIRMapMarker>
  </AIRMap>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#38976d",
        "borderTopRightRadius": 40,
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "paddingBottom": 23,
        "paddingLeft": 22,
        "paddingRight": 28,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "#ffffff",
            "fontFamily": "Whitney-Semibold",
            "fontSize": 19,
            "letterSpacing": 1.12,
            "marginTop": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      LEGEND
    </Text>
  </View>
  <View
    accessibilityLabel="Return to your current location"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 19,
        "opacity": 1,
        "position": "absolute",
        "right": 19,
      }
    }
    testID="user-location-button"
  >
    <Image
      source={
        {
          "testUri": "../../../assets/icons/icon-locationindicator.webp",
        }
      }
    />
  </View>
</RNCSafeAreaView>
`;

exports[`RangeMap should render correctly 1`] = `
<RNCSafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    {
      "backgroundColor": "#38976d",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#38976d",
          "flexDirection": "row",
          "paddingBottom": 18,
          "paddingTop": 20.5,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Go back to previous screen"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "left": 0,
          "opacity": 1,
          "paddingHorizontal": 23,
          "paddingVertical": 18,
          "position": "absolute",
          "transform": [
            {
              "scaleX": 1,
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/back.webp",
          }
        }
        style={false}
        tintColor={false}
      />
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "#ffffff",
            "fontFamily": "Whitney-Semibold",
            "fontSize": 18,
            "letterSpacing": 1,
            "maxWidth": 650,
            "paddingTop": 5,
          },
        ]
      }
    >
      RANGE MAP
    </Text>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    transparent={true}
    useNativeDriverForBackdrop={true}
    visible={false}
  />
  <AIRMap
    initialRegion={null}
    onChange={[Function]}
    onMapReady={[Function]}
    onRegionChangeComplete={[Function]}
    region={
      {
        "latitude": 42,
        "longitude": 42,
      }
    }
    style={
      {
        "height": 1259,
        "width": 750,
      }
    }
    testID="range-map"
    zoomEnabled={true}
  >
    <AIRMapUrlTile
      tileSize={512}
      urlTemplate="https://api.inaturalist.org/v1/grid/{z}/{x}/{y}.png?taxon_id=some_id&color=%2377B300&verifiable=true"
    />
    <AIRMapMarker
      coordinate={
        {
          "latitude": 42,
          "longitude": 42,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-camerabutton-onmap.webp",
          }
        }
      />
    </AIRMapMarker>
  </AIRMap>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#38976d",
        "borderTopRightRadius": 40,
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "paddingBottom": 23,
        "paddingLeft": 22,
        "paddingRight": 28,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "#ffffff",
            "fontFamily": "Whitney-Semibold",
            "fontSize": 19,
            "letterSpacing": 1.12,
            "marginTop": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      LEGEND
    </Text>
  </View>
</RNCSafeAreaView>
`;
